--- a/README
+++ b/README
@@ -1,1 +1,21 @@
 A starter script to get a basic web server up and running on a clean install of Ubuntu.
+
+ROADMAP (in no particular order)
+* Firewall
+* Lock down SSH options
+* FTP access
+* Mail servers
+* Rails
+* GIT
+* Common host hacks (media temple)
+
+Build out different config options for:
+* Full stack LAMP server
+* MySQL Cluster management server
+* MySQL Cluster node
+* Apache Load Balancer
+* Apache node
+* Static file server
+* Mail server
+* That one server we always meant to build that would monitor all the rest of the servers....
+* A server dedicated to handling backups
